# manic_entropy_squall

./: .coafile  .coveragerc  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  setup.cfg  tox.ini
.github/: CONTRIBUTING.rst  PULL_REQUEST_TEMPLATE.md
docs/source/: conf.py  index.rst  installation.rst
manic_entropy_squall/: main.py
manic_entropy_squall/cli/: cli.py
manic_entropy_squall/tests/: test_manic_entropy_squall.py
