[metadata]
name = manic_entropy_squall
summary = test project for pbr packaging style
description-file =
    README.rst
author = duanenielsen
author-email = duane.nielsen.rocks@gmail.com
home-page = http://www.openstack.org/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1

[entry_points]
console_scripts =
    manic_entropy_squall = manic_entropy_squall.cli.cli:cli

[pbr]
skip_authors = True
skip_changelog = True
warnerrors = True

[wheel]
universal = 0
